--- a/style.css
+++ b/style.css
@@ -19,12 +19,6 @@ h1 {
     padding-left: 10px;
 }
 
-.book h5{
-    text-align: center;
-    text-decoration: underline;
-    font-size: 20px;
-}
-
 .box {
     width: 50%;
     background-color: rgb(30, 30, 18);
@@ -88,7 +82,7 @@ form {
     bottom: 20px;
     left: 50%;
     transform: translateX(-50%);
-    background: #f9f9f9;
+    background: antiquewhite;
     padding: 20px;
     border: 1px solid #ccc;
 }
